@@ -22,9 +22,7 @@
 		<div id="notes">
 		</div>
 	</div>
-	<div id='float' class="float-load">
-		<b></b>
-	</div>
+	<div id='float' class="float-load"></div>
   </body>
 </html>
 
